--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.3",
     "node-env-run": "^4.0.2",
