--- a/client/package.json
+++ b/client/package.json
@@ -7,36 +7,36 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "axios": "^0.24.0",
+    "axios": "^1.8.4",
     "babel-polyfill": "6.26.0",
-    "babel-preset-env": "1.7.0",
+    "babel-preset-env": "^0.0.0",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
+    "babel-preset-stage-2": "^6.11.0",
     "babel-preset-stage-3": "6.24.1",
     "babel-register": "6.26.0",
-    "bootstrap": "4.3.1",
+    "bootstrap": "^5.3.5",
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "crypto-js": "^4.1.1",
     "jquery": "^3.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "node-sass": "^4.14.1",
     "path": "^0.12.7",
-    "react": "16.8.4",
+    "react": "^17.0.2",
     "react-bootstrap": "1.5.2",
     "react-confirm": "^0.1.23",
-    "react-dom": "16.8.4",
+    "react-dom": "^17.0.2",
     "react-fontawesome": "^1.7.1",
     "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.86.3",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider PORT=4001 react-scripts start",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
